--- a/.github/ISSUE_TEMPLATE/ui_report.yml
+++ b/.github/ISSUE_TEMPLATE/ui_report.yml
@@ -3,7 +3,6 @@ description: File a bug report, specific to any UI related things.
 title: '[UI] <title>'
 labels: 'Type: Bug'
 type: 'bug'
-assignees: ''
 body:
 - type: textarea
   attributes:
@@ -28,7 +27,7 @@ body:
 - type: input
   attributes:
     label: Code Revision
-    description: "Found using the "Show Server Revision" verb under the OOC tab."
+    description: "Found using the 'Show Server Revision' verb under the OOC tab."
   validations:
     required: false
 
