--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,13 +23,6 @@ jobs:
       - name: Ensure +x on CI directory
         run: |
           chmod -R +x ./tools/ci
-      - name: Restore SpacemanDMM cache
-        uses: actions/cache@v4
-        with:
-          path: ~/SpacemanDMM
-          key: ${{ runner.os }}-spacemandmm-${{ hashFiles('dependencies.sh') }}
-          restore-keys: |
-            ${{ runner.os }}-spacemandmm-
       - name: Restore Yarn cache
         uses: actions/cache@v4
         with:
@@ -69,7 +62,6 @@ jobs:
           pip3 install setuptools
           bash tools/ci/install_build_deps.sh
           bash tools/ci/install_ripgrep.sh
-          bash tools/ci/install_spaceman_dmm.sh dreamchecker
           bash tools/ci/install_spaceman_dmm.sh dmm-tools
           tools/bootstrap/python -c ''
       - name: Run Validation Tests
@@ -88,6 +80,7 @@ jobs:
         run: tools/github-actions/nanomap-renderer-invoker.sh --testing
 
   dreamchecker:
+    if: ( !contains(github.event.head_commit.message, '[ci skip]') )
     name: DreamChecker
     runs-on: ubuntu-24.04
     steps:
