--- a/tgui/.prettierignore
+++ b/tgui/.prettierignore
@@ -8,6 +8,7 @@
 
 .swcrc
 /docs
+/public
 /packages/tgui-polyfill
 /packages/tgfont/static
 /packages/tgfont/dist
@@ -15,7 +16,6 @@
 **/*.yml
 **/*.md
 
-# Avoid running on any bundles.
-/public/**/*
-# Running it on tgui.html is fine, however.
-!/public/tgui.html
+## Build artifacts
+/public/.tmp/**/*
+/public/*.map
