--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,10 +20,23 @@ jobs:
         with:
             fetch-depth: 0
       # Caches
-      - name: Setup Node
-        uses: ./.github/actions/setup_node
+      - name: Ensure +x on CI directory
+        run: |
+          chmod -R +x ./tools/ci
+      - name: Restore Yarn cache
+        uses: actions/cache@v4
         with:
-          restore-yarn-cache: true
+          path: tgui/.yarn/cache
+          key: ${{ runner.os }}-yarn-${{ hashFiles('tgui/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-yarn-
+      - name: Restore Node cache
+        uses: actions/cache@v4
+        with:
+          path: ~/.nvm
+          key: ${{ runner.os }}-node-${{ hashFiles('dependencies.sh') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
       - name: Restore Bootstrap cache
         uses: actions/cache@v4
         with:
@@ -47,6 +60,7 @@ jobs:
       - name: Install Tools
         run: |
           pip3 install setuptools
+          bash tools/ci/install_build_deps.sh
           bash tools/ci/install_ripgrep.sh
           bash tools/ci/install_spaceman_dmm.sh dmm-tools
           tools/bootstrap/python -c ''
@@ -115,38 +129,10 @@ jobs:
     if: ( !contains(github.event.head_commit.message, '[ci skip]') )
     strategy:
       matrix:
-        map: ['USE_MAP_TETHER', 'USE_MAP_STELLARDELIGHT', 'USE_MAP_GROUNDBASE']
+        map: ['USE_MAP_SOUTHERN_CROSS', 'USE_MAP_SOLUNA_NEXUS']
     # name: Integration Tests (${{ matrix.map }})
     name: Integration Tests
     # needs: ['run_linters', 'dreamchecker']
-    runs-on: ubuntu-24.04
-    steps:
-      - uses: actions/checkout@v4
-      - name: Ensure +x on CI directory
-        run: |
-          chmod -R +x ./tools/ci
-      - name: Restore BYOND from Cache
-        uses: ./.github/actions/restore_or_install_byond
-        with:
-          major: ${{ inputs.major }}
-          minor: ${{ inputs.minor }}
-      - name: Install RUST_G Dependencies
-        run: |
-          sudo dpkg --add-architecture i386
-          sudo apt update || true
-          sudo apt install zlib1g-dev:i386
-          ldd librust_g.so
-          ldd libbapi_dmm_reader.so
-          ldd libverdigris.so
-      - name: Unit Tests
-        run: tools/ci/compile_and_run.sh
-        env:
-          EXTRA_ARGS: "-DUNIT_TEST -D${{ matrix.map }}"
-          RUN: "1"
-
-  extra_map_tests:
-    if: ( !contains(github.event.head_commit.message, '[ci skip]') )
-    name: Map Tests
     runs-on: ubuntu-24.04
     steps:
       - uses: actions/checkout@v4
@@ -158,23 +144,37 @@ jobs:
         with:
           path: $HOME/byond
           key: ${{ runner.os }}-byond
-      - name: Install BYOND
-        run: tools/ci/install_byond.sh
+      - name: Install RUST_G Dependencies
+        run: |
+          sudo dpkg --add-architecture i386
+          sudo apt update || true
+          sudo apt install gcc-multilib
+          sudo apt install zlib1g-dev:i386
+          ldd librust_g.so
+          ldd libbapi_dmm_reader.so
+          ldd libverdigris.so
+      - name: Unit Tests
+        run: |
+          tools/ci/install_byond.sh
+          tools/ci/compile_and_run.sh
+        env:
+          EXTRA_ARGS: "-DUNIT_TEST -D${{ matrix.map }}"
+          RUN: "1"
       - name: Compile POIs
         run: tools/ci/compile_and_run.sh
         env:
-          EXTRA_ARGS: "-DMAP_TEST"
+          EXTRA_ARGS: "-DMAP_TEST -D${{ matrix.map }}"
           RUN: "0"
       - name: Compile away missions
         run: tools/ci/compile_and_run.sh
         env:
-          EXTRA_ARGS: "-DAWAY_MISSION_TEST -DUSE_MAP_TETHER" # Only Tether has support for all away missions
+          EXTRA_ARGS: "-DAWAY_MISSION_TEST -D${{ matrix.map }}"
           RUN: "0"
 
   tests_successful:
     if: ( !contains(github.event.head_commit.message, '[ci skip]') )
     name: Integration Tests
-    needs: ['run_linters', 'dreamchecker', 'unit_tests', 'extra_map_tests']
+    needs: ['run_linters', 'dreamchecker', 'unit_tests']
     runs-on: ubuntu-24.04
     steps:
       - name: Report Success
