--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -174,7 +174,7 @@ jobs:
   tests_successful:
     if: ( !contains(github.event.head_commit.message, '[ci skip]') )
     name: Integration Tests
-    needs: ['run_linters', 'dreamchecker', 'unit_tests', 'extra_map_tests']
+    needs: ['run_linters', 'dreamchecker', 'unit_tests']
     runs-on: ubuntu-24.04
     steps:
       - name: Report Success
