--- a/.github/workflows/update_tgs_dmapi.yml
+++ b/.github/workflows/update_tgs_dmapi.yml
@@ -31,8 +31,8 @@ jobs:
       - name: Commit and Push
         continue-on-error: true
         run: |
-          git config user.name "tgstation-ci[bot]"
-          git config user.email "179393467+tgstation-ci[bot]@users.noreply.github.com"
+          git config user.name "chompstation-ci[bot]"
+          git config user.email "12787406+chompstation-ci[bot]@users.noreply.github.com"
           git add .
           git commit -m 'Update TGS DMAPI'
           git push -f -u origin tgs-dmapi-update
