--- a/tgui/tsconfig.json
+++ b/tgui/tsconfig.json
@@ -17,5 +17,5 @@
     "strictNullChecks": true,
     "target": "ESNext"
   },
-  "include": ["./*.d.ts", "./packages", "vitest.config.mts", "rspack.config-dev.ts"]
+  "include": ["./*.d.ts", "./packages", "vitest.config.mts"]
 }
