--- a/html/changelogs_ch/archive/2025-07.yml
+++ b/html/changelogs_ch/archive/2025-07.yml
@@ -1,182 +1,204 @@
 2025-07-02:
   CHOMPStation2StaffMirrorBot:
-  - bugfix: Fixed virus databases breaking in Medical Computers
+    - bugfix: Fixed virus databases breaking in Medical Computers
   TheCaramelion:
-  - bugfix: Fixed Teshari being too healthy
-  - bugfix: Fixed Teshari being too brittle/flammable
-  - bugfix: Fixed Teshari holder sprites
+    - bugfix: Fixed Teshari being too healthy
+    - bugfix: Fixed Teshari being too brittle/flammable
+    - bugfix: Fixed Teshari holder sprites
 2025-07-03:
   Reo:
-  - qol: soap can be wetted to instantly clean tiles as it used to work.
-  - balance: Balances soap so that it's not terrible again. (removed the durability
-      mechanic)
+    - qol: soap can be wetted to instantly clean tiles as it used to work.
+    - balance:
+        Balances soap so that it's not terrible again. (removed the durability
+        mechanic)
   Tost:
-  - bugfix: Emergency lights no longer blow up on activation.
+    - bugfix: Emergency lights no longer blow up on activation.
 2025-07-04:
   Tost:
-  - balance: Emergency lights now last longer
+    - balance: Emergency lights now last longer
 2025-07-06:
   CHOMPStation2StaffMirrorBot:
-  - bugfix: distillery target temperature can no longer be set to null
-  - bugfix: maint lurkers not spawning with their languages
-  - bugfix: protean rigs can no longer get stripped in bellies
-  - bugfix: contractor IDs now take over mining and survey points
-  - bugfix: show and jacket spawn selection being inverted
-  - bugfix: paper icons for 516
-  - bugfix: food tray should update properly on item removal
-  - bugfix: transfer fluids from target
-  - qol: vore bellies now load instantly
-  - admin: fix server log rights
-  - admin: fix deadmin verb
-  - admin: adds missing space to some atom narrate messages
-  - code_imp: clean up some mob hooks
+    - bugfix: distillery target temperature can no longer be set to null
+    - bugfix: maint lurkers not spawning with their languages
+    - bugfix: protean rigs can no longer get stripped in bellies
+    - bugfix: contractor IDs now take over mining and survey points
+    - bugfix: show and jacket spawn selection being inverted
+    - bugfix: paper icons for 516
+    - bugfix: food tray should update properly on item removal
+    - bugfix: transfer fluids from target
+    - qol: vore bellies now load instantly
+    - admin: fix server log rights
+    - admin: fix deadmin verb
+    - admin: adds missing space to some atom narrate messages
+    - code_imp: clean up some mob hooks
   Diana:
-  - bugfix: 3 color wolf (Fat vwag) fixed. No longer has broken sprites.
-  - qol: Cyborg gripper will now smartly stack material stacks.
-  - qol: Cyborg gripper will no longer unselect stacks when used
-  - bugfix: Cyborg surgical and botany multibelt no longer have offset
-  - bugfix: Antags will now properly get antag-only text when examining things.
+    - bugfix: 3 color wolf (Fat vwag) fixed. No longer has broken sprites.
+    - qol: Cyborg gripper will now smartly stack material stacks.
+    - qol: Cyborg gripper will no longer unselect stacks when used
+    - bugfix: Cyborg surgical and botany multibelt no longer have offset
+    - bugfix: Antags will now properly get antag-only text when examining things.
   Diana, Kash:
-  - rscadd: Changelings can now absorb via VORE.
-  - refactor: Changeling is now a component
-  - balance: Changelings now get a genetic point upon absorbing someone
-  - balance: Changelings don't mc-die from epi
-  - balance: Changeling spacesuit is now free
-  - balance: A lot of changeling perks adjusted in minor ways. More to come.
-  - rscdel: Changeling death sting deleted.
-  - balance: Changeling unfat sting now reduces nutrition by 85% or 100 nutrition,
-      whatever's higher.
-  - qol: Changeling evolution menu is now TGUI
-  - code_imp: General code cleanup in Changeling code. Now runs smoother.
+    - rscadd: Changelings can now absorb via VORE.
+    - refactor: Changeling is now a component
+    - balance: Changelings now get a genetic point upon absorbing someone
+    - balance: Changelings don't mc-die from epi
+    - balance: Changeling spacesuit is now free
+    - balance: A lot of changeling perks adjusted in minor ways. More to come.
+    - rscdel: Changeling death sting deleted.
+    - balance:
+        Changeling unfat sting now reduces nutrition by 85% or 100 nutrition,
+        whatever's higher.
+    - qol: Changeling evolution menu is now TGUI
+    - code_imp: General code cleanup in Changeling code. Now runs smoother.
 2025-07-07:
   CHOMPStation2StaffMirrorBot:
-  - rscadd: Added subsystem for handling admin verbs
-  - rscadd: Added particle editor
-  - rscadd: Added filter editor
-  - rscadd: Added matrix editor
-  - rscadd: Added new vv dropdown options for atoms
-  - admin: '''modify transform'' dropdown option'
-  - admin: '''spin animation'' dropdown option'
-  - admin: '''stop all animations'' dropdown option'
-  - admin: '''edit filters'' dropdown option'
-  - admin: '''test matrices'' dropdown option'
-  - refactor: The tgui admin state can now take one or multiple permissions that are
-      allowed to view said state
-  - refactor: Updated vv code
-  - refactor: Moved a few verbs from the old admin verb system to the new one
-  - qol: moves robot sprite setting to the visual tab
+    - rscadd: Added subsystem for handling admin verbs
+    - rscadd: Added particle editor
+    - rscadd: Added filter editor
+    - rscadd: Added matrix editor
+    - rscadd: Added new vv dropdown options for atoms
+    - admin: "'modify transform' dropdown option"
+    - admin: "'spin animation' dropdown option"
+    - admin: "'stop all animations' dropdown option"
+    - admin: "'edit filters' dropdown option"
+    - admin: "'test matrices' dropdown option"
+    - refactor:
+        The tgui admin state can now take one or multiple permissions that are
+        allowed to view said state
+    - refactor: Updated vv code
+    - refactor: Moved a few verbs from the old admin verb system to the new one
+    - qol: moves robot sprite setting to the visual tab
 2025-07-08:
   CHOMPStation2StaffMirrorBot:
-  - bugfix: Virologists can change the name of their viruses now
+    - bugfix: Virologists can change the name of their viruses now
   FluffMedic:
-  - balance: voidsuits should no longer breach
+    - balance: voidsuits should no longer breach
 2025-07-09:
   CHOMPStation2StaffMirrorBot:
-  - rscadd: You can now write messages on people with a pen~ A shower cleans them
-      off.
-  - bugfix: mining voucher can no longer be redeemed multiple times
+    - rscadd:
+        You can now write messages on people with a pen~ A shower cleans them
+        off.
+    - bugfix: mining voucher can no longer be redeemed multiple times
 2025-07-10:
   CHOMPStation2StaffMirrorBot:
-  - maptweak: floors losing icon state on turf change
-  - bugfix: Copy slot should work better
+    - maptweak: floors losing icon state on turf change
+    - bugfix: Copy slot should work better
   Diana:
-  - bugfix: Borg claymore and borg jaws do proper damage values
-  - refactor: Shadekin component fully fleshed out. Can now be applied to any /mob/living.
-      No longer locked to species.
-  - rscadd: 'Crossports Adjust Light Flicker, which allows you to adjust your: Duration
-      of light flicker, color of light flicker, and light break chance.'
-  - rscadd: Flashlights will now flicker when shadekin phase in.
-  - bugfix: Flashlights no longer leave a lingering overlay when the user is eaten
-      by a shadekin
-  - qol: 'BESK, OESK, and RESK generate energy quicker. Note: D = Darkness gain/loss
-      L = Light gain/loss: (BESK: 0.5both->0.75both) (OESK:-0.5L, 0.5D -> -0.25L,
-      0.75D) (RESK: -1D -> -0.5D)'
-  - bugfix: Fixes mobs dying from no-atmos
-  - bugfix: 8 year bug that causes ability master to disappear upon aghost/relog
+    - bugfix: Borg claymore and borg jaws do proper damage values
+    - refactor:
+        Shadekin component fully fleshed out. Can now be applied to any /mob/living.
+        No longer locked to species.
+    - rscadd:
+        "Crossports Adjust Light Flicker, which allows you to adjust your: Duration
+        of light flicker, color of light flicker, and light break chance."
+    - rscadd: Flashlights will now flicker when shadekin phase in.
+    - bugfix:
+        Flashlights no longer leave a lingering overlay when the user is eaten
+        by a shadekin
+    - qol:
+        "BESK, OESK, and RESK generate energy quicker. Note: D = Darkness gain/loss
+        L = Light gain/loss: (BESK: 0.5both->0.75both) (OESK:-0.5L, 0.5D -> -0.25L,
+        0.75D) (RESK: -1D -> -0.5D)"
+    - bugfix: Fixes mobs dying from no-atmos
+    - bugfix: 8 year bug that causes ability master to disappear upon aghost/relog
 2025-07-11:
   CHOMPStation2StaffMirrorBot:
-  - bugfix: Set Voice verb uses correct list of voices
-  - bugfix: Spyndrome symptom can be found again
+    - bugfix: Set Voice verb uses correct list of voices
+    - bugfix: Spyndrome symptom can be found again
   Diana:
-  - bugfix: Xenochimera component can be applied midround
-  - bugfix: Grippers can insert items into protolathes
+    - bugfix: Xenochimera component can be applied midround
+    - bugfix: Grippers can insert items into protolathes
   Diana, Kash:
-  - rscadd: Shadekin light toggle now has a TGUI.
-  - bugfix: Borg grippers don't delete items
-  - bugfix: A lot of borg gripper exploits/bugs fixed
-  - qol: Borgs can reinforce girders at a speed of 1.5 seconds instead of the normal
-      4
-  - code_imp: Two hours spent to optimize shadekin phase code and save an average
-      of ~4 ms of CPU time per phase in extreme conditions!
+    - rscadd: Shadekin light toggle now has a TGUI.
+    - bugfix: Borg grippers don't delete items
+    - bugfix: A lot of borg gripper exploits/bugs fixed
+    - qol:
+        Borgs can reinforce girders at a speed of 1.5 seconds instead of the normal
+        4
+    - code_imp:
+        Two hours spent to optimize shadekin phase code and save an average
+        of ~4 ms of CPU time per phase in extreme conditions!
 2025-07-12:
   CHOMPStation2StaffMirrorBot:
-  - code_imp: improve tg chat performance
-  - bugfix: removed 2 pixels on the veymed female torso sprite to make it actually
-      fit into any clothes at all that aren't skirts.
-  - qol: Replaced the funky alt-click turf examine menu with a separate TGUI window
-      called the Lootpanel
+    - code_imp: improve tg chat performance
+    - bugfix:
+        removed 2 pixels on the veymed female torso sprite to make it actually
+        fit into any clothes at all that aren't skirts.
+    - qol:
+        Replaced the funky alt-click turf examine menu with a separate TGUI window
+        called the Lootpanel
 2025-07-13:
   FluffMedic:
-  - bugfix: sif hivebot bosses regained delay for their spinny attack
+    - bugfix: sif hivebot bosses regained delay for their spinny attack
 2025-07-14:
   CHOMPStation2StaffMirrorBot:
-  - bugfix: Alt click menu now lets you middle click
-  - code_imp: font awesome update
-  - bugfix: bellymode absorb messages not being editable
-  - qol: reduces the chance of the chat resizing badly
-  - admin: entity narrate works again
-  - admin: tickets can be answered from discord
-  - bugfix: Proteans can no longer get stuck in a death loop because their posibrain
-      fell out.
+    - bugfix: Alt click menu now lets you middle click
+    - code_imp: font awesome update
+    - bugfix: bellymode absorb messages not being editable
+    - qol: reduces the chance of the chat resizing badly
+    - admin: entity narrate works again
+    - admin: tickets can be answered from discord
+    - bugfix:
+        Proteans can no longer get stuck in a death loop because their posibrain
+        fell out.
   Diana:
-  - bugfix: Changeling stings fixed, can be used multiple times again.
-  - bugfix: Transformation sting works properly now
-  - bugfix: Extraction sting works properly now
-  - bugfix: Whitelisted items can be selected if you're the shape of that species
-      if not that species exactly.
-  - bugfix: Normal labcoats become teshari sprites when worn by a teshari
+    - bugfix: Changeling stings fixed, can be used multiple times again.
+    - bugfix: Transformation sting works properly now
+    - bugfix: Extraction sting works properly now
+    - bugfix:
+        Whitelisted items can be selected if you're the shape of that species
+        if not that species exactly.
+    - bugfix: Normal labcoats become teshari sprites when worn by a teshari
 2025-07-15:
   CHOMPStation2StaffMirrorBot:
-  - bugfix: a server crash on high deflect mobs
+    - bugfix: a server crash on high deflect mobs
   FluffMedic:
-  - rscadd: New environmental hazard to replace lava and zappy clouds, 4 new mobs
-      for tyr, and
-  - balance: Eclipse cryo top has been reworked
+    - rscadd:
+        New environmental hazard to replace lava and zappy clouds, 4 new mobs
+        for tyr, and
+    - balance: Eclipse cryo top has been reworked
   Guti:
-  - maptweak: Added the maintenance recycler and vendor all around Southern Cross
+    - maptweak: Added the maintenance recycler and vendor all around Southern Cross
   TheGreatKitsune:
-  - bugfix: fixed the admin size gun
+    - bugfix: fixed the admin size gun
 2025-07-16:
   CHOMPStation2StaffMirrorBot:
-  - qol: active belly settings tabs are now static and no longer scroll out of view
-  - rscadd: Hanner no longer get outed by medical scanners.
-  - bugfix: Removed copying of bloodtype from vanity TF procs, as if the user actually
-      has blood it will cause organ failure.
-  - bugfix: Added secondary ears to copy form ability.
-  - bugfix: fixed the recycler deciding plebeians weren't allowed to use it after
-      someone tried to buy an access locked item.
+    - qol: active belly settings tabs are now static and no longer scroll out of view
+    - rscadd: Hanner no longer get outed by medical scanners.
+    - bugfix:
+        Removed copying of bloodtype from vanity TF procs, as if the user actually
+        has blood it will cause organ failure.
+    - bugfix: Added secondary ears to copy form ability.
+    - bugfix:
+        fixed the recycler deciding plebeians weren't allowed to use it after
+        someone tried to buy an access locked item.
 2025-07-21:
   CHOMPStation2StaffMirrorBot:
-  - qol: default browser background follows light / dark mode
-  - rscadd: maplint for bad frequencies
-  - balance: rng of trashpiles altered
-  - code_imp: trash piles and loot piles now use a unified looting element for handling
-      drops and rarity. Not limited to just loot piles.
-  - rscadd: Adds three more admin duckies.
-  - rscadd: new traits that increase unarmed damage. Traits have been added that combine
-      with respective tiers of Hardy, to simulate high strength for species that should
-      be inhumanly strong
-  - bugfix: simplemobs should now take extra damage from hulk/knuckles
-  - code_imp: tgui dependency update
-  - qol: moves find ghost pod, vorespawn and some other join options from tgui list
-      to a tgui datum
-  - rscadd: additional ghost spawn options (2 slots), requires multiple /obj/effect/landmark/start/ghost_roles
-      to be mapped in
-  - maptweak: Replaced telecomms machines in the facility redgate map with props that
-      look like them instead.
+    - qol: default browser background follows light / dark mode
+    - rscadd: maplint for bad frequencies
+    - balance: rng of trashpiles altered
+    - code_imp:
+        trash piles and loot piles now use a unified looting element for handling
+        drops and rarity. Not limited to just loot piles.
+    - rscadd: Adds three more admin duckies.
+    - rscadd:
+        new traits that increase unarmed damage. Traits have been added that combine
+        with respective tiers of Hardy, to simulate high strength for species that should
+        be inhumanly strong
+    - bugfix: simplemobs should now take extra damage from hulk/knuckles
+    - code_imp: tgui dependency update
+    - qol:
+        moves find ghost pod, vorespawn and some other join options from tgui list
+        to a tgui datum
+    - rscadd:
+        additional ghost spawn options (2 slots), requires multiple /obj/effect/landmark/start/ghost_roles
+        to be mapped in
+    - maptweak:
+        Replaced telecomms machines in the facility redgate map with props that
+        look like them instead.
   Diana:
-  - qol: Proteans are less squishy to EMPs
-  - qol: Veymed limbs are less squishy to EMPs.
+    - qol: Proteans are less squishy to EMPs
+    - qol: Veymed limbs are less squishy to EMPs.
   UniquaSa:
-  - rscadd: Added new maintenance preds mobs
-  - maptweak: Added some Maint Pred Spawns in deck 0
+    - rscadd: Added new maintenance preds mobs
+    - maptweak: Added some Maint Pred Spawns in deck 0
